@@ -3,11 +3,12 @@ package com.kalee.athenaeum;
 import java.io.IOException;
 import java.util.List;
 
-import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.SpringBootTest;
-
 import com.kalee.athenaeum.data.Document;
 import com.kalee.athenaeum.data.S3Service;
+
+import org.apache.commons.io.IOUtils;
+import org.junit.jupiter.api.Test;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.S3Client;
@@ -20,10 +21,9 @@ class AthenaeumApplicationTests {
 	}
 
 
-	@Test
 	public  void aws() throws IOException {
 		// you need to have configured our $USER_HOME/.aws/credentials file containing acees key id and secret
-		byte[] content = S3Service.class.getClassLoader().getResourceAsStream("banner.txt").readAllBytes();
+		byte[] content = IOUtils.toByteArray(S3Service.class.getClassLoader().getResourceAsStream("banner.txt"));
 
 		S3Service service = new S3Service(S3Client.builder() .region(Region.EU_WEST_1)
 				.build());
